crates/sesh-integration-tests/src/snapshots/sesh_integration_tests__parser__tests__parses_snap_with_multiple_capture_groups.snap
---
source: crates/sesh-integration-tests/src/parser.rs
expression: "Script::parse(&[\"    :snap /(a)(b)/x\", \"\"].join(\"\\n\"))"
---
Script {
    lines: [
        Line {
            kind: Snap {
                count: 5,
                duration: 1s,
                color: false,
                filters: [
                    Filter {
                        patt: Regex(
                            "(a)(b)",
                        ),
                        paint: "x",
                    },
                ],
            },
            raw: "    :snap /(a)(b)/x",
        },
    ],
}
