crates/sesh-integration-tests/src/snapshots/sesh_integration_tests__parser__tests__parses_snap_with_multiple_filters.snap
---
source: crates/sesh-integration-tests/src/parser.rs
expression: "Script::parse(&[\":snap /foo/x  |baz|q\", \"\"].join(\"\\n\"))"
---
Script {
    lines: [
        Line {
            kind: Snap {
                count: 5,
                duration: 1s,
                filters: [
                    Filter {
                        patt: Regex(
                            "foo",
                        ),
                        paint: "x",
                    },
                    Filter {
                        patt: Regex(
                            "baz",
                        ),
                        paint: "q",
                    },
                ],
            },
            raw: ":snap /foo/x  |baz|q",
        },
    ],
}
