crates/sesh-integration-tests/src/snapshots/sesh_integration_tests__parser__tests__parses_write_directive.snap
---
source: crates/sesh-integration-tests/src/parser.rs
expression: "Script::parse(&[\"    :write tmp/hello.txt\", \"\"].join(\"\\n\"))"
---
Script {
    lines: [
        Line {
            kind: Write {
                path: "tmp/hello.txt",
            },
            raw: "    :write tmp/hello.txt",
        },
    ],
}
